# zeroclaw

./: .gitattributes  .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release-beta-on-push.yml  release-stable-manual.yml
apps/tauri/src/: local_node.rs
apps/tauri/src/commands/: settings.rs
apps/tauri/src/commands/automation/: camera.rs  microphone.rs  screen.rs
crates/zeroclaw-channels/src/: telegram.rs
crates/zeroclaw-channels/src/orchestrator/: mod.rs
crates/zeroclaw-runtime/: Cargo.toml
crates/zeroclaw-runtime/src/agent/: loop_.rs
src/agent/: loop_.rs
src/channels/: email_channel.rs  gmail_push.rs  mod.rs
src/config/: schema.rs
src/cron/: scheduler.rs
src/gateway/: api.rs  api_pairing.rs  nodes.rs
src/onboard/: wizard.rs
src/providers/: mod.rs
src/security/: leak_detector.rs
src/tui/: onboarding.rs
web/: .gitignore  package.json
web/scripts/: generate-i18n-types.mjs  generate-locales.mjs
web/src/lib/: i18n.ts  translations.json
